White background behind reminder to prevent text underflow

--- a/www/blocks/page/_surveys.scss
+++ b/www/blocks/page/_surveys.scss
@@ -14,6 +14,7 @@
     padding: 0.5rem 0 0 0.5rem;
     position: relative;
     .reminder {
+      background-color: #fff;
       position: absolute;
       font-size: 0.8rem;
       font-weight: bold;
